Pascal/pidigits/gmp.pas


{ Fill buf with word data from op }
function mpz_export(out buf; out countp: sizeuint; order: longint; size: sizeuint; endian: longint; nails: sizeuint; var op: mpz_t): pointer; cdecl; external LIB name '__gmpz_export';
{ Set rop to op!, the factorial of op }
procedure mpz_fac_ui(var rop: mpz_t; op: valuint); cdecl; external LIB name '__gmpz_fac_ui';
{ Divide n by d, forming a quotient q. Round mode floor. }
procedure mpz_fdiv_q(var q, n, d: mpz_t); cdecl; external LIB name '__gmpz_fdiv_q';
{ Divide n by d, forming a quotient q. d = 2^b. Round mode floor. }
procedure mpz_fdiv_q_2exp(var q, n: mpz_t; b: valuint); cdecl; external LIB name '__gmpz_fdiv_q_2exp';
{ Divide n by d, forming a quotient q. Round mode floor. }
function mpz_fdiv_q_ui(var q, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_fdiv_q_ui';
{ Divide n by d, forming a quotient q and remainder r. Round mode floor. }
procedure mpz_fdiv_qr(var q, r, n, d: mpz_t); cdecl; external LIB name '__gmpz_fdiv_qr';
{ Divide n by d, forming a quotient q and remainder r. Round mode floor. }
function mpz_fdiv_qr_ui(var q, r, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_fdiv_qr_ui';
{ Divide n by d, forming a remainder r. Round mode floor. }
procedure mpz_fdiv_r(var r, n, d: mpz_t); cdecl; external LIB name '__gmpz_fdiv_r';
{ Divide n by d, forming a remainder r. d = 2^b. Round mode floor. }
procedure mpz_fdiv_r_2exp(var r, n: mpz_t; b: valuint); cdecl; external LIB name '__gmpz_fdiv_r_2exp';
{ Divide n by d, forming a remainder r. Round mode floor. }
function mpz_fdiv_r_ui(var r, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_fdiv_r_ui';
{ Divide n by d. Round mode floor. }
function mpz_fdiv_ui(var n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_fdiv_ui';
{ Set fn to to Fn, the n’th Fibonacci number }
procedure mpz_fib_ui(var fn: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_fib_ui';
{ Set fn to Fn, and fnsub1 to Fn−1 }
procedure mpz_fib2_ui(var fn, fnsub1: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_fib2_ui';
{ Return non-zero iff the value of op fits in an signed int. Otherwise, return zero. }
function mpz_fits_sint_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_sint_p';
{ Return non-zero iff the value of op fits in an signed long int. Otherwise, return zero. }
function mpz_fits_slong_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_slong_p';
{ Return non-zero iff the value of op fits in an signed short int. Otherwise, return zero. }
function mpz_fits_sshort_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_sshort_p';
{ Return non-zero iff the value of op fits in an unsigned int. Otherwise, return zero. }
function mpz_fits_uint_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_uint_p';
{ Return non-zero iff the value of op fits in an unsigned long int. Otherwise, return zero. }
function mpz_fits_ulong_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_ulong_p';
{ Return non-zero iff the value of op fits in an unsigned short int. Otherwise, return zero. }
function mpz_fits_ushort_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_fits_ushort_p';
{ Set rop to the greatest common divisor of op1 and op2 }
procedure mpz_gcd(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_gcd';
{ Compute the greatest common divisor of op1 and op2. If rop is not NULL, store the result there. }
function mpz_gcd_ui(var rop, op1: mpz_t; op2: valuint): valuint; cdecl; external LIB name '__gmpz_gcd_ui';
{ Set g to the greatest common divisor of a and b, and in addition set s and t to coefficients satisfying as + bt = g }
procedure mpz_gcdext(var g, s, t, a, b: mpz_t); cdecl; external LIB name '__gmpz_gcdext';
{ Convert op to a double, truncating if necessary (ie. rounding towards zero) }
function mpz_get_d(var op: mpz_t): double; cdecl; external LIB name '__gmpz_get_d';
{ Convert op to a double, truncating if necessary (ie. rounding towards zero), and returning the exponent separately }
function mpz_get_d_2exp(out exp: valsint; var op: mpz_t): double; cdecl; external LIB name '__gmpz_get_d_2exp';
{ Return the value of op as a signed long }
function mpz_get_si(var op: mpz_t): valsint; cdecl; external LIB name '__gmpz_get_si';
{ Convert op to a string of digits in base base. The base argument may vary from 2 to 62 or from −2 to −36. If str is NULL, the result string is allocated using the current allocation function }
function mpz_get_str(str: pchar; base: longint; var op: mpz_t): pchar; cdecl; external LIB name '__gmpz_get_str';
{ Return the value of op as an unsigned long }
function mpz_get_ui(var op: mpz_t): valuint; cdecl; external LIB name '__gmpz_get_ui';
{ Return limb number n from op }
function mpz_getlimbn(var op: mpz_t; n: mp_size_t): mp_limb_t; cdecl; external LIB name '__gmpz_getlimbn';
{ If op1 and op2 are both >= 0 or both < 0, return the hamming distance between the two operands, which is the number of bit positions where op1 and op2 have different bit values }
function mpz_hamdist(var op1, op2: mpz_t): valuint; cdecl; external LIB name '__gmpz_hamdist';
{ Set rop from an array of word data at op }
procedure mpz_import(var rop: mpz_t; count: sizeuint; order: longint; size: sizeuint; endian: longint; nails: sizeuint; const op); cdecl; external LIB name '__gmpz_import';
{ Initialize integer, and set its value to 0 }
procedure mpz_init(out integer_: mpz_t); cdecl; external LIB name '__gmpz_init';
{ Initialize integer, with space for n bits, and set its value to 0 }
procedure mpz_init2(out integer_: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_init2';
{ Initialize rop with limb space and set the initial numeric value from op }
procedure mpz_init_set(out rop: mpz_t; var op: mpz_t); cdecl; external LIB name '__gmpz_init_set';
{ Initialize rop with limb space and set the initial numeric value from op }
procedure mpz_init_set_d(out rop: mpz_t; op: double); cdecl; external LIB name '__gmpz_init_set_d';
{ Initialize rop with limb space and set the initial numeric value from op }
procedure mpz_init_set_si(out rop: mpz_t; op: valsint); cdecl; external LIB name '__gmpz_init_set_si';
{ Initialize rop and set its value like mpz_set_str }
function mpz_init_set_str(out rop: mpz_t; str: pchar; base: longint): longint; cdecl; external LIB name '__gmpz_init_set_str';
{ Initialize rop with limb space and set the initial numeric value from op }
procedure mpz_init_set_ui(out rop: mpz_t; op: valuint); cdecl; external LIB name '__gmpz_init_set_ui';
{ Compute the inverse of op1 modulo op2 and put the result in rop }
function mpz_invert(var rop, op1, op2: mpz_t): longint; cdecl; external LIB name '__gmpz_invert';
{ Set rop to op1 bitwise inclusive-or op2 }
procedure mpz_ior(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_ior';
{ Calculate the Jacobi symbol. This is defined only for b odd }
function mpz_jacobi(var a, b: mpz_t): longint; cdecl; external LIB name '__gmpz_jacobi';
{ Calculate the Jacobi symbol with the Kronecker extension }
function mpz_kronecker_si(var a: mpz_t; b: valsint): longint; cdecl; external LIB name '__gmpz_kronecker_si';
{ Calculate the Jacobi symbol with the Kronecker extension }
function mpz_kronecker_ui(var a: mpz_t; b: valuint): longint; cdecl; external LIB name '__gmpz_kronecker_ui';
{ Calculate the Jacobi symbol with the Kronecker extension }
function mpz_si_kronecker(a: valsint; var b: mpz_t): longint; cdecl; external LIB name '__gmpz_si_kronecker';
{ Calculate the Jacobi symbol with the Kronecker extension }
function mpz_ui_kronecker(a: valuint; var b: mpz_t): longint; cdecl; external LIB name '__gmpz_ui_kronecker';
{ Set rop to the least common multiple of op1 and op2 }
procedure mpz_lcm(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_lcm';
{ Set rop to the least common multiple of op1 and op2 }
procedure mpz_lcm_ui(var rop, op1: mpz_t; op2: valuint); cdecl; external LIB name '__gmpz_lcm_ui';
{ Set ln to to Ln, the n’th Lucas number }
procedure mpz_lucnum_ui(var ln: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_lucnum_ui';
{ Set ln to Ln, and lnsub1 to Ln−1 }
procedure mpz_lucnum2_ui(var ln, lnsub1: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_lucnum2_ui';

// No docs: function mpz_millerrabin(var _para1: mpz_t; _para2: longint): longint; cdecl; external LIB name '__gmpz_millerrabin';

{ Set r to n mod d. The sign of the divisor is ignored; the result is always non-negative. }
procedure mpz_mod(var r, n, d: mpz_t); cdecl; external LIB name '__gmpz_mod';
{ Set rop to op1 × op2 }
procedure mpz_mul(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_mul';
{ Set rop to op1 × 2^op2. This operation can also be defined as a left shift by op2 bits. }
procedure mpz_mul_2exp(var rop, op1: mpz_t; op2: valuint); cdecl; external LIB name '__gmpz_mul_2exp';
{ Set rop to op1 × op2 }
procedure mpz_mul_si(var rop, op1: mpz_t; op2: valsint); cdecl; external LIB name '__gmpz_mul_si';
{ Set rop to op1 × op2 }
procedure mpz_mul_ui(var rop, op1: mpz_t; op2: valuint); cdecl; external LIB name '__gmpz_mul_ui';
{ Set rop to −op }
procedure mpz_neg(var rop, op: mpz_t); cdecl; external LIB name '__gmpz_neg';
{ Set rop to the next prime greater than op }
procedure mpz_nextprime(var rop, op: mpz_t); cdecl; external LIB name '__gmpz_nextprime';
{ Return non-zero if op is a perfect power, i.e., if there exist integers a and b, with b > 1, such that op = a^b }
function mpz_perfect_power_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_perfect_power_p';
{ Return non-zero if op is a perfect square, i.e., if the square root of op is an integer }
function mpz_perfect_square_p(var op: mpz_t): longint; cdecl; external LIB name '__gmpz_perfect_square_p';
{ If op >= 0, return the population count of op, which is the number of 1 bits in the binary representation }
function mpz_popcount(var op: mpz_t): valuint; cdecl; external LIB name '__gmpz_popcount';
{ Set rop to base^exp. The case 0^0 yields 1. }
procedure mpz_pow_ui(var rop, base: mpz_t; exp: valuint); cdecl; external LIB name '__gmpz_pow_ui';
{ Set rop to base^exp mod mod_ }
procedure mpz_powm(var rop, base, exp, mod_: mpz_t); cdecl; external LIB name '__gmpz_powm';
{ Set rop to base^exp mod mod_ }
procedure mpz_powm_ui(var rop, base: mpz_t; exp: valuint; var mod_: mpz_t); cdecl; external LIB name '__gmpz_powm_ui';
{ Determine whether n is prime. Return 2 if n is definitely prime, return 1 if n is probably prime (without being certain), or return 0 if n is definitely composite. }
function mpz_probab_prime_p(var n: mpz_t; reps: longint): longint; cdecl; external LIB name '__gmpz_probab_prime_p';

{ Obsolete: Generate a random integer of at most max_size limbs }
// procedure mpz_random(var rop: mpz_t; max_size: mp_size_t); cdecl; external LIB name '__gmpz_random';
{ Obsolete: Generate a random integer of at most max_size limbs, with long strings of zeros and ones in the binary representation }
// procedure mpz_random2(var rop: mpz_t; max_size: mp_size_t); cdecl; external LIB name '__gmpz_random2';
